<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:elevation="4dp">

    <ImageButton
        android:padding="@dimen/margin_small"
        android:contentDescription="@string/侧边栏按钮"
        android:id="@+id/navigation_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium_14"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_navigation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium_14"
        android:text="@string/看板"
        android:textColor="@color/文本"
        android:textSize="@dimen/Bar文本大小"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/navigation_button"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:padding="@dimen/margin_small"
        android:id="@+id/bar_search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_medium_16"
        android:background="@android:color/transparent"
        android:contentDescription="@string/搜索按钮"
        android:src="@drawable/ic_search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</android.support.constraint.ConstraintLayout>