<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    tools:context=".ItemPageActivity">

    <android.support.design.widget.AppBarLayout
        android:fitsSystemWindows="true"
        android:id="@+id/itpg_appbar"
        android:layout_width="match_parent"
        android:layout_height="240dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:fitsSystemWindows="true"
            android:id="@+id/collapsing_toolbar"
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@android:color/white"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/itpg_bg_img"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:paddingBottom="40dp"
                app:layout_collapseMode="parallax"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:elevation="6dp"
                android:id="@+id/itpg_back_button"
                android:clickable="true"
                android:background="@android:color/transparent"
                android:src="@mipmap/back"
                android:padding="@dimen/margin_medium_10"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/margin_huge"
                android:layout_marginStart="@dimen/margin_medium_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_collapseMode="parallax"
                tools:ignore="ContentDescription"/>
            <ImageButton
                android:elevation="6dp"
                android:clickable="true"
                android:id="@+id/itpg_change_bg_button"
                android:scaleType="centerCrop"
                android:background="@android:color/transparent"
                android:layout_marginTop="@dimen/margin_huge"
                android:layout_marginEnd="@dimen/margin_medium_12"
                android:src="@mipmap/mountain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_medium_10"
                android:layout_gravity="end"
                app:layout_collapseMode="parallax"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/itpg_event_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_medium_14"
                android:layout_marginStart="26dp"
                android:layout_gravity="start"
                android:layout_marginTop="120dp"
                android:text="测试副标题"
                android:textSize="@dimen/text_medium"
                app:layout_collapseMode="parallax"
                android:textColor="@color/半透明白色文本" />


            <android.support.v7.widget.CardView
                android:id="@+id/itpg_card"
                android:layout_width="match_parent"
                android:clickable="true"
                app:cardElevation="4dp"
                android:layout_height="64dp"
                android:layout_gravity="bottom"
                android:layout_margin="@dimen/margin_medium_10"
                android:theme="@style/ThemeOverlay.AppCompat.Light"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="@dimen/margin_tiny"
                app:layout_collapseMode="pin">

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/itpg_card_up"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="@dimen/margin_medium_16"
                    android:paddingTop="@dimen/margin_small"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:paddingEnd="@dimen/margin_medium_16"
                    android:paddingBottom="@dimen/margin_small">

                    <TextView
                        android:id="@+id/itpg_event_date"
                        android:layout_width="wrap_content"
                        android:layout_height="17dp"
                        android:textColor="@color/重要文本"
                        android:textSize="@dimen/text_small"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/itpg_need_done_num_text"
                        android:layout_width="wrap_content"
                        android:layout_height="17dp"
                        android:layout_marginEnd="@dimen/margin_medium_16"
                        android:text="@string/已完成"
                        android:textColor="@color/重要文本"
                        android:textSize="@dimen/text_small"
                        app:layout_constraintBaseline_toBaselineOf="@+id/itpg_have_done_num_text"
                        app:layout_constraintEnd_toStartOf="@+id/itpg_have_done_num_text" />

                    <TextView
                        android:id="@+id/itpg_have_done_num_text"
                        android:layout_width="wrap_content"
                        android:layout_height="17dp"
                        android:layout_marginEnd="@dimen/margin_medium_16"
                        android:text="@string/未完成"
                        android:textColor="@color/文本"
                        android:textSize="@dimen/text_small"
                        app:layout_constraintBaseline_toBaselineOf="@+id/itpg_whole_num_text"
                        app:layout_constraintEnd_toStartOf="@+id/itpg_whole_num_text" />

                    <TextView
                        android:id="@+id/itpg_whole_num_text"
                        android:layout_width="wrap_content"
                        android:layout_height="17dp"
                        android:text="@string/总日程"
                        android:textColor="@color/文本"
                        android:textSize="@dimen/text_small"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/itpg_event_title"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:textColor="@color/重要文本"
                        android:textSize="@dimen/text_big"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/itpg_event_date"
                        app:layout_constraintTop_toBottomOf="@+id/itpg_event_date" />

                    <TextView
                        android:textStyle="bold"
                        android:id="@+id/itpg_need_done_num"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:text="0"
                        android:textColor="@color/重要文本"
                        android:textSize="@dimen/text_big"
                        app:layout_constraintEnd_toEndOf="@+id/itpg_need_done_num_text"
                        app:layout_constraintStart_toStartOf="@+id/itpg_need_done_num_text"
                        app:layout_constraintTop_toBottomOf="@+id/itpg_need_done_num_text" />

                    <TextView
                        android:textStyle="bold"
                        android:id="@+id/itpg_have_done_num"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:text="0"
                        android:textColor="@color/文本"
                        android:textSize="@dimen/text_big"
                        app:layout_constraintEnd_toEndOf="@+id/itpg_have_done_num_text"
                        app:layout_constraintStart_toStartOf="@+id/itpg_have_done_num_text"
                        app:layout_constraintTop_toBottomOf="@+id/itpg_have_done_num_text" />

                    <TextView
                        android:textStyle="bold"
                        android:id="@+id/itpg_whole_num"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:text="0"
                        android:textColor="@color/文本"
                        android:textSize="@dimen/text_big"
                        app:layout_constraintEnd_toEndOf="@+id/itpg_whole_num_text"
                        app:layout_constraintStart_toStartOf="@+id/itpg_whole_num_text"
                        app:layout_constraintTop_toBottomOf="@+id/itpg_whole_num_text" />

                    
                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.Toolbar
                app:titleTextColor="@android:color/white"
                android:id="@+id/itpg_toolbar"
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:elevation="@dimen/margin_tiny"

                app:layout_collapseMode="pin"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <com.nakiha.event.UIWidgets.MyRecyclerView
            android:id="@+id/itpg_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </com.nakiha.event.UIWidgets.MyRecyclerView>
    </android.support.v4.widget.NestedScrollView>



    <android.support.design.widget.FloatingActionButton
        android:id="@+id/itpg_add_item"
        android:layout_gravity="end|bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="88dp"
        android:backgroundTint="@color/粉色"
        android:clickable="true"
        android:scaleType="center"
        android:src="@drawable/ic_add_light"
        android:translationZ="@dimen/high"
        app:borderWidth="0dp"
        app:fabCustomSize="60dp"
        app:rippleColor="@android:color/transparent" />
</android.support.design.widget.CoordinatorLayout>
